tests/baselines/reference/jsDeclarationsExportedClassAliases(strict=true).errors.txt
utils/errors.js(2,17): error TS7006: Parameter 'status' implicitly has an 'any' type.


==== utils/index.js (0 errors) ====
    // issue arises here on compilation
    const errors = require("./errors");
    
    module.exports = {
        errors
    };
==== utils/errors.js (1 errors) ====
    class FancyError extends Error {
        constructor(status) {
                    ~~~~~~
!!! error TS7006: Parameter 'status' implicitly has an 'any' type.
            super(`error with status ${status}`);
        }
    }
    
    module.exports = {
        FancyError
    };
    